--- a/downwith.css
+++ b/downwith.css
@@ -1,31 +1,64 @@
-p {
-	margin-left: 1em; /* adds margin to paragraphs */
-}
+html{background-color:#b5b2a4; height:100%;}
 
-section {
-	margin-left: 1em;
-	padding-bottom: 2em;
-}
+body {background-color:#c7c3b0; max-width:1300px;margin:0 auto 0 auto;padding:1em; padding-bottom:0; min-height:100%;}
 
-img {
-	max-width: 100%; /* keep images from stretching beyond page */
-	margin-left: 1em;
-}
-
-dt {
-	font-weight: bold; /* bolds titles in descriptive lists */
-}
-
-dl {
-	margin-left: 1em;
-}
-
-#header {
+header {
 	position:sticky; /* sticks it to the top */
 	position:-webkit-sticky; /* safari work around too */
-	top:0;
-	background:white;
+	top:0; /* this sets the position of it 0px from top of page*/
+	background:inherit;
+	margin-bottom:0;
 }
+
+.hidden {display:inline;visibility:hidden;overflow:hidden;height:0;width:0;position:absolute;}
+
+/*allows content links to account for sticky header */
+a.anchor {display:block;position:relative;top:-120px;visibility:hidden;}
+
+/*lets the subtitle and dates sit beside the main title */
+.title {display:inline} 
+
+/*setting the max-widths for larger screens*/
+div#sitetitle {max-width:1300px;margin:auto;}
+nav#sitenav {max-width:1300px;margin:auto;border-style:solid none solid none;border-width:2px;padding:4px;}
+span.totop {float:right;margin-right:2em;}
+article {max-width:1000px;margin:auto;}
+
+
+/* flex boxfor the intro/contents section*/
+div.flexcont {display:flex; flex-wrap:wrap;align-items:flex-start;}
+div.cont {min-width:256px;border-style:outset;border-radius:5px;padding:.5em;}
+div.aside {flex:1;font-style:italic;border-left:3px solid;margin-left:1em;}
+@media (max-width: 600px) {div.flexcont, div.cont, div.aside{flex: 100%;} div.aside{margin-top:1em;margin-left:0;}}
+
+div.guidetitle {border-bottom: 2px solid;margin-bottom:1em;}
+
+/* section styling */
+article {
+	background-color:#d1cdb7;
+	padding:1em;
+	margin-top:0;
+	margin-bottom:0;
+	border-style: none ridge ridge ridge;
+	border-color: #9e9d94;
+}
+
+h3 {border-bottom-style:double;} /*h3 is main header for sections.*/
+p, li {font-family:sans-serif;} /*sans undertale */
+
+
+iframe.gear {
+	width:100%;
+	min-width:300px;
+	height:450px;
+}
+
+
+/* this currently only comes up in one spot... */
+dt {font-weight: bold;} /* bolds titles in descriptive lists */
+dl {margin-left: 1em;} /*indents subitems in descriptive lists */
+
+
 
 .macro {
 	background:lightgray;
@@ -36,23 +69,25 @@ dl {
 }
 
 /*Styling for the rotation windows */
-
-ul#rot li{
+div.rot {
+	margin:auto;
+	text-align:left;
+	max-width:100%;
+	min-width: 25%;
+	background:lightgray;
+	border:outset;
+	border-radius:5px;
+	justify-content:center;
+	align-items:center;
+	display:inline-flex;
+}
+div.rot ul {
+	padding:24px;
+	margin:auto;
+}
+div.rot li {
 	display:inline-block;
 	margin:auto;
 }
+.center {display:block;width:100%;text-align:center;} /*center those windows*/
 
-ul#rot {
-	padding:24px;
-	margin:0;
-}
-
-div.rot {
-	max-width:960px;
-	background:lightgray;
-	border:solid;
-	margin:1em;
-	justify-content:center;
-	align-items:center;
-	display:inline-block;
-}
