--- a/skills/blm.css
+++ b/skills/blm.css
@@ -1,151 +1,151 @@
-#manip {
+.manip {
     width: 48px;
     height: 48px;
     background: url(blm.png) -0px -0px;
 }
-#between {
+.between {
     width: 48px;
     height: 48px;
     background: url(blm.png) -48px -0px;
 }
-#blizz1 {
+.blizz1 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -96px -0px;
 }
-#blizz2 {
+.blizz2 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -144px -0px;
 }
-#blizz3 {
+.blizz3 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -192px -0px;
 }
-#blizz4 {
+.blizz4 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -240px -0px;
 }
-#convert {
+.convert {
     width: 48px;
     height: 48px;
     background: url(blm.png) -288px -0px;
 }
-#enoc {
+.enoc {
     width: 48px;
     height: 48px;
     background: url(blm.png) -576px -0px;
 }
-#fire1 {
+.fire1 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -624px -0px;
 }
-#fire2 {
+.fire2 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -672px -0px;
 }
-#fire3 {
+.fire3 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -720px -0px;
 }
-#fire4 {
+.fire4 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -768px -0px;
 }
-#fireproc {
+.fireproc {
     width: 48px;
     height: 48px;
     background: url(blm.png) -816px -0px;
 }
-#flare {
+.flare {
     width: 48px;
     height: 48px;
     background: url(blm.png) -864px -0px;
 }
-#foul {
+.foul {
     width: 48px;
     height: 48px;
     background: url(blm.png) -912px -0px;
 }
-#freeze {
+.freeze {
     width: 48px;
     height: 48px;
     background: url(blm.png) -960px -0px;
 }
-#leylines {
+.leylines {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1008px -0px;
 }
-#manaward {
+.manaward {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1152px -0px;
 }
-#scathe {
+.scathe {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1200px -0px;
 }
-#sharp {
+.sharp {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1248px -0px;
 }
-#sleep {
+.sleep {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1296px -0px;
 }
-#thun {
+.thun {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1344px -0px;
 }
-#thun2 {
+.thun2 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1392px -0px;
 }
-#thun3 {
+.thun3 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1440px -0px;
 }
-#thun4 {
+.thun4 {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1488px -0px;
 }
-#thunproc {
+.thunproc {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1632px -0px;
 }
-#transpose {
+.transpose {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1680px -0px;
 }
-#triple {
+.triple {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1728px -0px;
 }
 
-#xeno {
+.xeno {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1776px -0px;
 }
 
-#despair {
+.despair {
     width: 48px;
     height: 48px;
     background: url(blm.png) -1824px -0px;
@@ -153,147 +153,147 @@
 
 /*weaving zied now */
 
-#imanip {
+.imanip {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -0px -0px;
 }
-#ibetween {
+.ibetween {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -36px -0px;
 }
-#iblizz1 {
+.iblizz1 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -72px -0px;
 }
-#iblizz2 {
+.iblizz2 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -108px -0px;
 }
-#iblizz3 {
+.iblizz3 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -144px -0px;
 }
-#iblizz4 {
+.iblizz4 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -180px -0px;
 }
-#iconvert {
+.iconvert {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -216px -0px;
 }
-#ienoc {
+.ienoc {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -432px -0px;
 }
-#ifire1 {
+.ifire1 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -468px -0px;
 }
-#ifire2 {
+.ifire2 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -504px -0px;
 }
-#ifire3 {
+.ifire3 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -540px -0px;
 }
-#ifire4 {
+.ifire4 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -576px -0px;
 }
-#ifireproc {
+.ifireproc {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -612px -0px;
 }
-#iflare {
+.iflare {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -648px -0px;
 }
-#ifoul {
+.ifoul {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -684px -0px;
 }
-#ifreeze {
+.ifreeze {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -720px -0px;
 }
-#ileylines {
+.ileylines {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -756px -0px;
 }
-#iward {
+.iward {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -864px -0px;
 }
-#iscathe {
+.iscathe {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -900px -0px;
 }
-#isharp {
+.isharp {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -936px -0px;
 }
-#ithun1 {
+.ithun1 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -1008px -0px;
 }
-#ithun2 {
+.ithun2 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -1044px -0px;
 }
-#ithun3 {
+.ithun3 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -1080px -0px;
 }
-#ithun4 {
+.ithun4 {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -1116px -0px;
 }
-#ithunproc {
+.ithunproc {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -1224px -0px;
 }
-#itranspose {
+.itranspose {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -1260px -0px;
 }
-#itriple {
+.itriple {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -1296px -0px;
 }
-#ixeno {
+.ixeno {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -1332px -0px;
 }
-#idespair {
+.idespair {
     width: 36px;
     height: 36px;
     background: url(iblm.png) -13368px -0px;
