--- a/headertest.css
+++ b/headertest.css
@@ -8,9 +8,7 @@ nav.sitenav{
 	display:inline-block;
 	width:100%;
 	/*these are here to fix a mobile problem*/
-	border-top-style:none;
-	border-right-style:none;
-	border-left-style:none;
+	border-width:0 0 20px;
 }
 
 img.menuicon{height:1.4rem;margin-bottom:-.2rem;}
